--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,6 +42,10 @@ target 'QbuyStoreApp' do
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
+  pod 'Firebase', :modular_headers => true
+  pod 'FirebaseCore', :modular_headers => true
+  pod 'FirebaseCoreInternal', :modular_headers => true
+  pod 'GoogleUtilities', :modular_headers => true
 
   target 'QbuyStoreAppTests' do
     inherit! :complete
