--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-hook-form": "^7.43.8",
-    "react-native": "0.71.4",
+    "react-native": "^0.72.4",
     "react-native-calendar-range-picker": "^1.5.3",
     "react-native-date-picker": "^4.2.9",
     "react-native-device-info": "^10.6.0",
