--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-device-info": "^10.6.0",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-gradle-plugin": "^0.71.19",
     "react-native-image-picker": "^5.3.1",
     "react-native-otp-textinput": "^1.0.0",
     "react-native-reanimated": "^3.0.2",
