--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "npx react-native run-ios --simulator=iPhone 14 Pro",
     "start": "react-native start",
     "apk": "cd android && ./gradlew assembleRelease",
     "test": "jest",
@@ -15,6 +15,8 @@
     "build:android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/"
   },
   "dependencies": {
+    "@baronha/react-native-image-grid": "^0.2.7",
+    "@baronha/react-native-multiple-image-picker": "^1.1.5",
     "@hookform/resolvers": "^3.0.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-firebase/app": "^18.0.0",
