--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android",
+    "android": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=greenDebug --appIdSuffix=green",
     "ios": "npx react-native run-ios --simulator=iPhone 14 Pro",
     "start": "react-native start",
     "apk": "cd android && ./gradlew assembleRelease",
@@ -18,6 +18,7 @@
     "@baronha/react-native-image-grid": "^0.2.7",
     "@baronha/react-native-multiple-image-picker": "^1.1.5",
     "@hookform/resolvers": "^3.0.0",
+    "@notifee/react-native": "^7.8.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-firebase/app": "^18.0.0",
     "@react-native-firebase/messaging": "^18.0.0",
