--- a/package.json
+++ b/package.json
@@ -10,9 +10,21 @@
     "test": "jest",
     "lint": "eslint .",
     "release": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --variant=release",
-    "clean-up": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
-    "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'",
-    "build:android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/"
+    "android:pandatest": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=pandaDebug --appIdSuffix=panda",
+    "android:greentest": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=debugGreen --appIdSuffix=green",
+    "android:fashiontest": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=fashionDebug --appIdSuffix=fashion",
+    "android:pandalivedebug": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=debugPanda --appIdSuffix=panda",
+    "android:greenlivedebug": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=debugGreen --appIdSuffix=green",
+    "android:fashionlivedebug": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=debugFashion --appIdSuffix=fashion",
+    "android:pandaliverelease": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=releasePanda --appIdSuffix=panda",
+    "android:greenliverelease": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=releaseGreen --appIdSuffix=green",
+    "android:fashionliverelease": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=releaseFashion --appIdSuffix=fashion",
+    "android:panadadevapk": "cd android && ./gradlew assemblePandaRelease",
+    "android:greendevapk": "cd android && ./gradlew assembleGreenRelease",
+    "android:fashiondevapk": "cd android && ./gradlew assembleFashionRelease",
+    "android:panadabundle": "cd android && ./gradlew bundlePandaRelease",
+    "android:greenbundle": "cd android && ./gradlew bundleGreenRelease",
+    "android:fashionbundle": "cd android && ./gradlew bundleFashionRelease"
   },
   "dependencies": {
     "@baronha/react-native-image-grid": "^0.2.7",
@@ -33,6 +45,7 @@
     "react-native-calendar-range-picker": "^1.5.3",
     "react-native-date-picker": "^4.2.9",
     "react-native-device-info": "^10.6.0",
+    "react-native-eject": "^0.2.0",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-gradle-plugin": "^0.71.19",
