--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "lint": "eslint .",
     "release": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --variant=release",
     "android:pandatest": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=pandaDebug --appIdSuffix=panda",
-    "android:greentest": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=debugGreen --appIdSuffix=green",
+    "android:greentest": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=greenDebug --appIdSuffix=green",
     "android:fashiontest": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=fashionDebug --appIdSuffix=fashion",
-    "android:pandalivedebug": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=debugPanda --appIdSuffix=panda",
-    "android:greenlivedebug": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=debugGreen --appIdSuffix=green",
-    "android:fashionlivedebug": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=debugFashion --appIdSuffix=fashion",
+    "android:pandalivedebug": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=pandaDebug --appIdSuffix=panda",
+    "android:greenlivedebug": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=greenDebug --appIdSuffix=green",
+    "android:fashionlivedebug": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=fashionDebug --appIdSuffix=fashion",
     "android:pandaliverelease": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=releasePanda --appIdSuffix=panda",
     "android:greenliverelease": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=releaseGreen --appIdSuffix=green",
     "android:fashionliverelease": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=releaseFashion --appIdSuffix=fashion",
@@ -33,8 +33,8 @@
     "@hookform/resolvers": "^3.0.0",
     "@notifee/react-native": "^7.8.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
-    "@react-native-firebase/app": "^18.6.1",
-    "@react-native-firebase/messaging": "^18.0.0",
+    "@react-native-firebase/app": "^18.7.3",
+    "@react-native-firebase/messaging": "^18.7.3",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
