--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "react-native start",
     "apk": "cd android && ./gradlew assembleRelease",
     "test": "jest",
-    "android:greendebug": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=greenDebug --appIdSuffix=green",
+    "android:greenRelease": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=greenRelease --appIdSuffix=green",
     "lint": "eslint .",
-    "release": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --variant=release",
+    "release": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android--mode=greenRelease",
     "android:pandatest": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=pandaDebug --appIdSuffix=panda",
     "android:greentest": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=greenDebug --appIdSuffix=green",
     "android:fashiontest": "adb reverse tcp:9090 tcp:9090 && npx react-native run-android --mode=fashionDebug --appIdSuffix=fashion",
